[gd_scene load_steps=2 format=3 uid="uid://cfglga485riqx"]

[ext_resource type="Script" path="res://scripts/turn_queue.gd" id="1_uop6f"]

[node name="TurnQueue" type="Node" node_paths=PackedStringArray("turn_label")]
script = ExtResource("1_uop6f")
turn_label = NodePath("CanvasLayer/CenterContainer/Label")

[node name="TurnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.424345, 0.957854, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 60

[node name="LabelDisappearTimer" type="Timer" parent="CanvasLayer"]
